defining chapter 4 terms, add operating system reference

--- a/mapping.tex
+++ b/mapping.tex
@@ -75,7 +75,7 @@ To calculate the mapping that is implied by these two mathematical transformatio
 
 In the computer science context, a mapping is an abstract data type or concrete data structure, commonly referred to as an \emph{associative array} or \emph{dictionary} \cite{assocarray2008}.  
 
-Abstractly and simply, the one and only way to store data of any kind (the value "0", the value "1", some text, an image, a sound, a recorded signal) in a computer of any kind, such that one can reliably retrieve the data later, is to put the data in some "bucket" that has some "label". The words "bucket" and "label", as used here, are not well-defined in computer science. But they help to unobtrusively make the point that if the data has no label that is associated with it or equivalently if the label has no unique memory location associated with it, then practically, it cannot be retrieved. 
+Abstractly and simply, the one and only way to store data of any kind (the value "0", the value "1", some text, an image, a sound, a recorded signal) in a computer of any kind, such that one can reliably retrieve the data later, is to put the data in some "bucket" that has some "label". The words "bucket" and "label", as used here, are not well-defined in computer science. But they help to unobtrusively make the point that if the data has no label that is associated with it or equivalently if the label has no unique memory location associated with it, then practically, it cannot be retrieved. In the scenario of a computer processor accessing internal memory, \emph{bucket} and \emph{label} could be replaced by \emph{memory location} and \emph{memory address} respectively.
 
 As an example from the music information retrieval context, if one wants to be able to store a large amount of sheet music such that it can be found later, one needs some system to catalog or index the material such that a piece of sheet music can be referred to by some label. In the case of a library, this label is often a call number, the title of the piece, the name of the composer, etc.
 
