--- a/user_interface_and_data_visualization_design.tex
+++ b/user_interface_and_data_visualization_design.tex
@@ -18,7 +18,7 @@ The concerns of user interface designers have changed considerably since people 
 
 The oldest computer interfaces largely depend on punch cards and paper tape as control mechanisms and paper printers for output and program feedback. On machines used during the 1950s and 1960s, in order to input a program and a dataset into a computer, first one prepares a deck of punched cards with a typewriter-like machine, then one feeds the deck to the computer \cite{oshistory2011}. Some machines can also mount reels of magnetic tape that store oft-used or previously generated datasets or precompiled complimentary software. On these early machines, a particular program being run from a deck of punch cards is assumed to have control of all the available resources of the computer. There would be no other resident software running on the machine handling auxilery tasks like on modern computers. Any hardware devices required by a particular program like punch card readers and line printers had to be handled completely by the user program contained in the deck of cards fed to the machine. 
 
-\emph{Operating systems} development grew out of the growing complexity of computer systems involving many cooperating devices, which themselves mirrored growth of the complexity of the programs that were written for them. It makes little sense for a user of a machine to write basic operating software for interfacing with the same perhipheral devices as every other user of the computer everytime they want to run a program on such a machine. Since any user of a computer during the 1960s needed to enter a queue to reserve time to run their program on a machine they shared with their entire organization, any time wasted debugging low-level interactions with input and output devices is a major setback. Consequently, machines were developed that included libraries of code to take care of low-level control and provide easier access to input and output devices as always resident services. This collection of software that is permenantly resident on a machine became known as a \emph{batch monitor} \cite{os2000}. A user's program could link to these preloaded libraries without including the operating logic explicitly within their own program code. This shift is often cited as the genesis of the modern operating system.
+\emph{Operating systems} development grew out of the growing complexity of computer systems involving many cooperating devices, which themselves mirrored growth of the complexity of the programs that were written for them. It makes little sense for a user of a machine to write basic operating software for interfacing with the same perhipheral devices as every other user of the computer everytime they want to run a program on such a machine. Since any user of a computer during the 1960s needed to enter a queue to reserve time to run their program on a machine they shared with their entire organization, any time wasted debugging low-level interactions with input and output devices is a major setback \cite{operatingsystems2010}. Consequently, machines were developed that included libraries of code to take care of low-level control and provide easier access to input and output devices as always resident services. This collection of software that is permenantly resident on a machine became known as a \emph{batch monitor} \cite{os2000}. A user's program could link to these preloaded libraries without including the operating logic explicitly within their own program code. This shift is often cited as the genesis of the modern operating system.
 
 In addition to providing access to input/output devices, the monitor provides services to perform error checking on user submitted programs and for generating useful feedback to the user concerning the progress of execution of a user program. The idea of generating "useful" feedback, and what that might mean, can be understood as the first instance of an explicitly designed user interface and the birth of user interface design \cite{unix2008}.
 
