--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-07-27 14:47:02 -0400 
+%% Created for Vijay at 2011-07-31 18:26:44 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,14 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@book{operatingsystems2010,
+	Author = {Sibsankar Haldar and Alex A. Aravind},
+	Date-Added = {2011-07-31 18:24:15 -0400},
+	Date-Modified = {2011-07-31 18:25:01 -0400},
+	Publisher = {Pearson Education India},
+	Title = {Operating Systems},
+	Year = {2010}}
 
 @inproceedings{seeking1994,
 	Acmid = {191775},
