little work on chapter 4

--- a/vizmapper.tex
+++ b/vizmapper.tex
@@ -89,29 +89,34 @@ Before beginning development on a software system, it is necessary to choose a d
 There are a number of terms that are used in the remainder of the chapter that are helpful to define.
 
 \begin{description}
-\item[Development environment] the sofware environment that the developer uses to create code and executables
-\item[Deployment environment] the software environment that the user uses to run executables
-\item[Progammer Code] the human readable text that is written by the developer in a specific computer language and translated to produce an executable
-\item[Machine code] the machine readable code that is often produced by a compiler and requires no further translation to be understood by a physical CPU
-\item[Executable] an executable is the file that is produced by the developer and given to a user to run in their deployment environment - it is a file or collection of files that encompass the program that the user can \emph{run} without any further translation within their deployment environment - can be programmer code, machine code, or other forms of executable code  
-\item[Machine] the physical CPU that understands and can directly execute machine code
-\item[Compiler] takes programmer code as input and produces machine code as output
-\item[Interpretor] takes programmer code as an executable to run a program
+\item[Development environment] the sofware/hardware environment that the developer uses to write programmer code and executables
+\item[Deployment environment] the software/hardware environment that the user uses to run executables
+\item[Operating system] a program that manages hardware resources and the computer processor - reduces the complexity and risk of writting programmer code that interfaces with the physical hardware and computer processor by providing an easier to use set of operations that provide a higher level interface (called system calls) to the processor and other hardware - system calls prevent programmer code from generating machine code that executes low-level processor and hardware operations in such a way that would destablize the system
+\item[Progammer code] the human readable text that is written by the developer in a specific computer language and translated to produce an executable
+\item[Machine code] the machine readable code that is often produced by a compiler and requires no further translation to be understood by a physical computer processor
+\item[Executable] the file or collection of files that the user can \emph{run} without any further manual translation within their deployment environment - can be programmer code, machine code, or other forms of executable code  
+\item[Machine] the physical computer processor that provides a stable interface of machine operations that can be executed by machine code
+\item[Compiler] the software program that takes programmer code as input and produces machine code or machine code executables as output
+\item[Interpretor] the software program takes programmer code as an executable to run a program
 \end{description}
 
-There are any number of very stable development environments that enable a software developer to write a single corpus of programmer code and translate into executables that can run on Windows, OSX, and Linux. This choices effects primarily the developer of the software and not the user of the software. The choice of deployment environment is much more consequential to the user because it effects how they will actually run the executable.
+There are any number of very stable development environments that enable a software developer to write a single collection of programmer code and translate the code into executables that can run on Windows, OSX, and Linux machines. This choices effects the developer of the software and not the user of the software. The choice of deployment environment is much more consequential to the user because it effects how they will actually run the executable.
 
 There are three common methods for a user to run software on their chosen machine.
 
-The first method is for the user to run a pre-compiled machine code executable, which means that the developer has written code, translated the code with a compiler into machine-specific code, and produced a file that can be executed without any further translation on the user's specific machine/operating system combination. If there is no available pre-compiled binary for a specific machine architecture, the user can obtain the source code of the software and compile a binary file that works on their specific machine as long as a compiler exists for their machine.
+\begin{enumerate}
+\item The first method is for the user to run a compiled machine code executable, which means that the developer has written code and translated the code with a compiler into machine code that can be executed without any further translation on the user's specific machine and operating system. If there is no available compiled executable for a specific machine architecture, the user can obtain the programmer code and compile it into an executable that works on their specific machine as long as a compiler exists for their machine.
 
-The first method is an option when the software is developed in a \emph{compiled language} environment. There are also environments that use \emph{interpreted languages} or \emph{script languages}. An interpreted language differs from a compiled language because unlike a compiled language that uses the process of translating the program code into machine code with a compiler and producing a machine code executable to run the program, an interpreted language uses the process of interpreting the program code line by line directly when the program is run. The interpretor is responsible for interfacing with the machine for the interpreted code when the executable is run. In a interpreted language the programmer code and the executable are often the same file. A compiled generated executable interfaces directly with the machine because it has already been converted into machine code. 
+\item The first method is an option when the software is developed in a \emph{compiled language} environment. There are also environments that use \emph{interpreted languages} or \emph{script languages}. An interpreted language differs from a compiled language because unlike a compiled language that uses the process of translating the program code into machine code with a compiler and producing a machine code executable to run the program, an interpreted language uses the process of interpreting the program code line by line directly when the program is run. The interpretor is responsible for interfacing with the machine for the interpreted code when the executable is run. In a interpreted language the programmer code and the executable are often the same file. A compiled executable interfaces directly with the machine because it has already been converted into machine code. 
 
-A web application with internal logic is essentially an interpreted executable because a web browser that runs HTML, CSS, and Javascript downloads the programmer code and uses an internal interpretor to execute the program. It does not download a compiled executable. Distributing software as a script executable to be run in an interpretor is attractive because the burden for implementing the interpretor for various different machine architectures is moved to the developer of the programming language and the developer can count on a user being able to run their program as long as the interpretor for the language is available for the user's machine. The developer can write \emph{machine-independent} code.
+A web application is essentially an interpreted executable because a web browser that runs HTML, CSS, and Javascript downloads the programmer code and uses an internal interpretor to execute the program. It does not download a compiled executable. Distributing software as a script executable to be run in an interpretor is attractive because the burden for implementing the interpretor for various different machine architectures is moved to the developer of the programming language and the developer can count on a user being able to run their program as long as the interpretor for the language is available for the user's machine. The developer can write \emph{machine-independent} code.
 
-Environments like Java use a third strategy and run software on \emph{virtual machines}. A virtual machine language is somewhat like a hybrid of a compiled language and interpreted language because a virtual machine language is compiled, but it is compiled to an intermediate machine code that is not the machine code of the actual physical machine that is running the program. It is compiled to the "machine code" of a virtual machine that must be implemented for all machines that one would like to run the program on. This is useful because the user can be given a single file that is not program code like a compiled language, but the developer still can count on the file being able to be run on any machine that has the virtual machine available on the system.
+\item Environments like Java use a third strategy and run software on \emph{virtual machines}. A virtual machine language is somewhat like a hybrid of a compiled language and interpreted language because a virtual machine language is compiled, but it is compiled to an intermediate machine code that is not the machine code of the actual physical machine that is running the program. It is compiled to the "machine code" of a software virtual machine that must be implemented for all machines that one would like to run the program on. This is useful because the user can be given a single file that is not program code like a compiled language, but the developer still can count on the file being able to be run on any machine that has the virtual machine available on the system.
+\end{enumerate}
 
-Given that the hope is for multiple team members to be running Vizmapper and working simultaneously on the mapping and that there is presumably a local network available to allow the various devices on the sensor network to communicate with each other, it makes sense for Vizmapper to be implemented as a web application. A web application is typically distributed as a two part software system where one part is called the \emph{client} and the other part is called the \emph{server}. One server can serve the web application to a relatively large number of clients. This is the source of another advantage of web applications. Client are typically run in a web browser and therefore can be reliably run on any machine that includes a modern web browser. Since Libmapper is compiled code, the server software can take care of interfacing with the library and communicating through the Mapper Protocol with the rest of the network. Because the server need only be run on one machine, this type of application is much easier to deploy on a collection of heterogenous machines.
+Given that the hope is for multiple team members to be running Vizmapper and working simultaneously on the mapping and that there is presumably a local network available to allow the various devices on the sensor network to communicate with each other, it makes sense for Vizmapper to be implemented as a web application. 
+
+A web application is typically distributed as a two part software system where one part is called the \emph{client} and the other part is called the \emph{server}. One server can serve the web application to a large number of clients. This is the source of another advantage of web applications. A web client runs in a web browser and therefore can be run on any machine that includes a modern web browser. All modern web browsers provide a basically identical deployment environment. Since Libmapper is compiled code, the server software can take care of interfacing with the library and communicating through the Mapper Protocol with the rest of the network. Despite the fact that the server is more restricted as to what deployment environment it can be run on, the server needs to run on only one machine, a web application is much easier to deploy on a collection of heterogenous machines.
 
 Stephen Sinclair, the developer of Libmapper and a member of IDMIL, also developed a basic server written in Python (a popular interpreted language) that interfaces with Libmapper and also provides a convenient interface for a web browser client to execute Mapper commands by communicating with the server. This web server is called Webmapper.
 
