marcelo's corrections to chapter 2 with on place holder for explaining maxmapper

--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-07-31 18:26:44 -0400 
+%% Created for Vijay at 2011-08-02 17:40:08 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,16 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@phdthesis{nort2010,
+	Address = {Montreal, QC, Canada},
+	Author = {Douglas Van Nort},
+	Date-Added = {2011-08-02 17:13:56 -0400},
+	Date-Modified = {2011-08-02 17:14:43 -0400},
+	Month = {January},
+	School = {McGill University},
+	Title = {Modular and Adaptive Control of Sound Processing},
+	Year = {2010}}
 
 @book{operatingsystems2010,
 	Author = {Sibsankar Haldar and Alex A. Aravind},
@@ -528,8 +538,9 @@ revision of OSC is developed.},
 	Year = {2007},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1162/comj.2007.31.1.50}}
 
-@article{Hunt2003,
+@article{hunt2003,
 	Author = {Andy Hunt and Marcelo M. Wanderley and Matthew Paradis},
+	Date-Modified = {2011-08-02 17:39:48 -0400},
 	Journal = {Journal of New Music Research},
 	Month = {December},
 	Number = {4},
