--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-08-02 17:40:08 -0400 
+%% Created for Vijay at 2011-08-02 18:19:26 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,17 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@article{orio2002,
+	Author = {Marcelo Mortensen Wanderley and Nicola Orio},
+	Date-Added = {2011-08-02 18:18:16 -0400},
+	Date-Modified = {2011-08-02 18:19:15 -0400},
+	Journal = {Computer Music Journal},
+	Number = {3},
+	Pages = {62-76},
+	Title = {Evaluation of Input Devices for Musical Expression: Borrowing Tools from HCI},
+	Volume = {26},
+	Year = {2002}}
 
 @phdthesis{nort2010,
 	Address = {Montreal, QC, Canada},
